<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="center_horizontal"
            android:text="@string/satellite_space_collision_prevision"
            android:textSize="20sp"
            android:textStyle="bold" />

        <androidx.constraintlayout.utils.widget.ImageFilterView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="16dp"
            android:src="@mipmap/app_logo_foreground" />

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:autoLink="web"
            android:gravity="center_horizontal"
            android:text="@string/satellite_space_collision_prevision_is_an_application_that_allows_you_to_see_the_satellites_that_are_in_danger_of_colliding_with_each_other_the_application_uses_the_data_provided_by_the_space_track_org_website_which_is_updated_daily_this_project_was_created_as_a_part_of_google_summer_of_code_2023_under_liquid_galaxy"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_description2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/author"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_description3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center_horizontal"
            android:text="@string/rafel_salgueiro_santacreu"
            android:textSize="16sp"
            android:textStyle="bold" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/contact"
            android:textSize="16sp"
            android:layout_marginBottom="3dp"/>

        <androidx.constraintlayout.utils.widget.ImageFilterView
            android:id="@+id/iv_linkedin"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginBottom="16dp"
            android:src="@drawable/linkedin"
            android:layout_gravity="center_horizontal"
            />

        <TextView
            android:id="@+id/tv_description4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/mentor"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_description5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/andreu_iba_ez"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_description6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/mois_s_mart_nez"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_description7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/ivan_josa"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_description8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center_horizontal"
            android:text="@string/pau_francino"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/lleida_liquid_galaxy_lab_support" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/albert_ricard"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/unai_franch"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/mohamed_zazu"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/imad_laichi"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center_horizontal"
            android:text="@string/navdeep_singh"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/all_logos"
            android:layout_marginBottom="3dp"/>

        <androidx.constraintlayout.utils.widget.ImageFilterView
            android:layout_width="853dp"
            android:layout_height="533dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/splscr" />


    </LinearLayout>

</ScrollView>