<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="scp.satellite_space_collision_prevision.Configuration"
    tools:layout_editor_absoluteX="6dp"
    tools:layout_editor_absoluteY="0dp">

    <View
        android:id="@+id/view3"
        android:layout_width="345dp"
        android:layout_height="716dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="52dp"
        android:background="@drawable/rounded1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/view2"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/IPAddressServer"
        android:layout_width="269dp"
        android:layout_height="79dp"
        android:layout_marginTop="140dp"
        android:layout_marginEnd="100dp"
        android:ems="10"
        android:hint="Server IP Address"
        android:inputType="text"
        android:singleLine="true"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Server"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/detectionPort"
        android:layout_width="269dp"
        android:layout_height="79dp"
        android:layout_marginTop="140dp"
        android:layout_marginEnd="104dp"
        android:ems="10"
        android:hint="Detector of collision port"
        android:inputType="text"
        android:singleLine="true"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Server"
        app:layout_constraintVertical_bias="0.251" />

    <EditText
        android:id="@+id/orbitsPort"
        android:layout_width="269dp"
        android:layout_height="79dp"
        android:layout_marginTop="140dp"
        android:layout_marginEnd="100dp"
        android:ems="10"
        android:hint="Orbits of satellites port"
        android:inputType="text"
        android:singleLine="true"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Server"
        app:layout_constraintVertical_bias="0.511" />

    <View
        android:id="@+id/view"
        android:layout_width="321dp"
        android:layout_height="710dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="64dp"
        android:background="@drawable/rounded1"
        app:layout_constraintEnd_toStartOf="@+id/view2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/connectionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="130dp"
        android:layout_marginTop="116dp"
        android:shadowColor="@color/white"
        android:text="@string/connection"
        android:textColorHighlight="@color/teal_700"
        android:textSize="25sp"
        app:emojiCompatEnabled="false"
        app:layout_constraintStart_toEndOf="@+id/view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/statusServer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="900dp"
        android:text="@string/status"
        android:textSize="25sp"
        app:emojiCompatEnabled="false"
        app:layout_constraintBottom_toTopOf="@+id/numberSlaves"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/connectionText" />

    <Button
        android:id="@+id/DisconnectServerButton"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="156dp"
        android:layout_height="70dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="100dp"
        android:text="@string/Disconnect"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/disconnectButton"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="156dp"
        android:layout_height="70dp"
        android:layout_marginStart="212dp"
        android:text="@string/Disconnect"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MasterPassword"
        app:layout_constraintVertical_bias="0.495" />

    <View
        android:id="@+id/view2"
        android:layout_width="478dp"
        android:layout_height="714dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="68dp"
        android:background="@drawable/rounded"
        app:layout_constraintEnd_toStartOf="@+id/view3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/view"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/rebootButton"
        android:layout_width="207dp"
        android:layout_height="72dp"
        android:layout_marginStart="56dp"
        android:text="@string/reboot"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/MasterPassword"
        app:layout_constraintTop_toBottomOf="@+id/clearKMLDataButton" />

    <Button
        android:id="@+id/powerOffButton"
        android:layout_width="207dp"
        android:layout_height="72dp"
        android:layout_marginStart="32dp"
        android:text="@string/power_off"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/rebootButton"
        app:layout_constraintTop_toBottomOf="@+id/relaunchButton" />

    <Button
        android:id="@+id/relaunchButton"
        android:layout_width="207dp"
        android:layout_height="72dp"
        android:layout_marginStart="28dp"
        android:text="@string/relaunch"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/powerOffButton"
        app:layout_constraintStart_toEndOf="@+id/clearKMLDataButton"
        app:layout_constraintTop_toBottomOf="@+id/hideLogos" />

    <Button
        android:id="@+id/hideLogos"
        android:layout_width="207dp"
        android:layout_height="72dp"
        android:layout_marginStart="28dp"
        android:text="@string/hide_logos"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/relaunchButton"
        app:layout_constraintStart_toEndOf="@+id/showLogo"
        app:layout_constraintTop_toBottomOf="@+id/lgText" />

    <Button
        android:id="@+id/showLogo"
        android:layout_width="207dp"
        android:layout_height="72dp"
        android:layout_marginStart="56dp"
        android:text="@string/display_logos"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/clearKMLDataButton"
        app:layout_constraintStart_toEndOf="@+id/numberSlaves"
        app:layout_constraintTop_toBottomOf="@+id/lgText" />

    <TextView
        android:id="@+id/lgText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="294dp"
        android:layout_marginTop="116dp"
        android:text="@string/commands"
        android:textSize="25sp"
        app:layout_constraintStart_toEndOf="@+id/connectionText"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/clearKMLDataButton"
        android:layout_width="207dp"
        android:layout_height="72dp"
        android:layout_marginStart="56dp"
        android:text="@string/clear_kml_data"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/rebootButton"
        app:layout_constraintStart_toEndOf="@+id/IPAddress"
        app:layout_constraintTop_toBottomOf="@+id/showLogo" />

    <EditText
        android:id="@+id/MasterPassword"
        android:layout_width="269dp"
        android:layout_height="79dp"
        android:layout_marginStart="80dp"
        android:autofillHints="lqgalaxy"
        android:ems="10"
        android:hint="@string/master_password"
        android:inputType="text"
        android:labelFor="@+id/MasterPassword"
        android:singleLine="true"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/ConnectButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/IPAddress"
        tools:ignore="TextFields" />

    <Button
        android:id="@+id/ConnectButton"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="143dp"
        android:layout_height="70dp"
        android:layout_marginStart="60dp"
        android:text="@string/connect"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MasterPassword" />

    <TextView
        android:id="@+id/Status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:text="@string/status"
        android:textSize="25sp"
        app:emojiCompatEnabled="false"
        app:layout_constraintBottom_toTopOf="@+id/numberSlaves"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/connectionText" />

    <EditText
        android:id="@+id/IPAddress"
        android:layout_width="269dp"
        android:layout_height="79dp"
        android:layout_marginStart="80dp"
        android:ems="10"
        android:hint="@string/master_ip_address"
        android:inputType="text"
        android:singleLine="true"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/MasterPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numberSlaves" />



    <EditText
        android:id="@+id/numberSlaves"
        android:layout_width="269dp"
        android:layout_height="79dp"
        android:layout_marginStart="80dp"
        android:autofillHints="3"
        android:ems="10"
        android:hint="@string/Number_of_slaves"
        android:inputType="number"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/IPAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Status" />

    <TextView
        android:id="@+id/Server"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="340dp"
        android:layout_marginTop="116dp"
        android:text="@string/server"
        android:textSize="25sp"
        app:layout_constraintStart_toEndOf="@+id/lgText"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/ConnectServerButton"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="143dp"
        android:layout_height="70dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="100dp"
        android:text="@string/connect"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/DisconnectServerButton" />

    <ImageButton
        android:id="@+id/returnMainPage"
        android:layout_width="94dp"
        android:layout_height="58dp"
        android:layout_marginStart="1188dp"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/app_name"
        android:labelFor="@+id/returnMainPage"
        android:rotation="90"
        app:layout_constraintStart_toEndOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/arrow_down_float" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />


</androidx.constraintlayout.widget.ConstraintLayout>